--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "A mock server to help io-app development https://io.italia.it/",
   "version": "1.0.0",
   "main": "app.js",
-  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/IC-69--update-io-backend-with-legal-message-endpoints/api_backend.yaml",
-  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/IC-69--update-io-backend-with-legal-message-endpoints/api_public.yaml",
-  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v7.27.1-RELEASE/api_bonus.yaml",
-  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v7.27.1-RELEASE/api_cgn.yaml",
+  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.28.0-RELEASE/api_backend.yaml",
+  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.28.0-RELEASE/api_public.yaml",
+  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v7.28.0-RELEASE/api_bonus.yaml",
+  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v7.28.0-RELEASE/api_cgn.yaml",
   "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/cgn_operator_search_api_integration/api_cgn_operator_search.yaml",
   "api_cgn_geo": "https://raw.githubusercontent.com/pagopa/io-backend/here_geoapi_integration/api_geo.yaml",
   "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.1/definitions.yml",
@@ -21,7 +21,7 @@
   "api_bpd_award": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.1/bonus/specs/bpd/award.json",
   "api_bpd_winning_transactions": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.1/bonus/specs/bpd/winning_transactions.json",
   "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.1/bonus/specs/bpd/winning_transactions_v2.json",
-  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v7.27.1/api_eucovidcert.yaml",
+  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v7.28.0-RELEASE/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
   "author": "Matteo Boschi",
   "license": "MIT",
