--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,12 +9,12 @@ jobs:
       - checkout
       - restore_cache: &restore_cache
           keys:
-            - v1.1-dependencies-{{ checksum "package.json" }}
+            - v1.1-dependencies-{{ checksum "yarn.lock" }}
       - run:
           name: Install dependencies
           command: yarn install
       - save_cache:
-          key: v1.1-dependencies-{{ checksum "package.json" }}
+          key: v1.1-dependencies-{{ checksum "yarn.lock" }}
           paths:
             - node_modules
       - run:
