--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "crypto": "^1.0.1",
     "date-fns": "^2.27.0",
     "express": "^4.17.2",
-    "faker": "^5.5.3",
+    "@faker-js/faker": "^5.5.3",
     "figlet": "^1.5.2",
     "fp-ts": "1.19.5",
     "io-ts": "1.8.5",
