--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "api_bpd_award": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.1/bonus/specs/bpd/award.json",
   "api_bpd_winning_transactions": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.1/bonus/specs/bpd/winning_transactions.json",
   "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.1/bonus/specs/bpd/winning_transactions_v2.json",
-  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v7.29.0-RELEASE/api_eucovidcert.yaml",
+  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/IC-205--update-eucovid-certificate-models/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
   "author": "Matteo Boschi",
   "license": "MIT",
