--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   },
   "dependencies": {
     "@pagopa/ts-commons": "^9.4.0",
+    "avvio": "^8.1.0",
     "body-parser": "^1.19.1",
     "chalk": "^4.1.1",
     "cli-ux": "^5.6.3",
