--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "pagopa_cobadge_configuration": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.6/pagopa/cobadge/abi_definitions.yml",
   "pagopa_privative_configuration": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.6/pagopa/privative/definitions.yml",
   "api_bpd_citizen": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.6/bonus/specs/bpd/citizen.json",
-  "api_bpd_citizen_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/IAC-138-update-citizenv2/bonus/specs/bpd/citizen_v2.json",
+  "api_bpd_citizen_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.6/bonus/specs/bpd/citizen_v2.json",
   "api_bpd_payment": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.6/bonus/specs/bpd/payment.json",
   "api_bpd_award": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.6/bonus/specs/bpd/award.json",
   "api_bpd_winning_transactions": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.6/bonus/specs/bpd/winning_transactions.json",
