--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A mock server to help io-app development https://io.italia.it/",
   "version": "1.0.0",
   "main": "app.js",
-  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.35.0-RELEASE/api_backend.yaml",
+  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/ic-327-add-endpoint/api_backend.yaml",
   "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v7.35.0-RELEASE/api_public.yaml",
   "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v7.35.0-RELEASE/api_bonus.yaml",
   "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v7.35.0-RELEASE/api_cgn.yaml",
@@ -30,6 +30,7 @@
     "dev": "nodemon",
     "test": "jest",
     "test-watch": "jest --watch",
+    "test:dev": "jest --detectOpenHandles --coverage=false",
     "lint": "tslint -p . -t verbose",
     "lint-autofix": "tslint -p . -t verbose --fix",
     "start": "ts-node src/start.ts",
