--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.12/bonus/specs/bpd/winning_transactions_v2.json",
   "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v7.37.0-RELEASE/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
+  "api_cdc": "assets/cdc/CdcSwagger.yml",
   "author": "Matteo Boschi",
   "license": "MIT",
   "private": false,
@@ -53,7 +54,8 @@
     "generate:bpd-winning-transactions-v2": "rimraf generated/definitions/bpd/winning_transactions/v2 && mkdir -p generated/definitions/bpd/winning_transactions/v2  && gen-api-models --api-spec $npm_package_api_bpd_winning_transactions_v2 --out-dir ./generated/definitions/bpd/winning_transactions/v2 --no-strict",
     "generate:eu-covid-cert-definitions": "rimraf generated/definitions/eu_covid_cert && mkdir -p generated/definitions/eu_covid_cert && gen-api-models --api-spec $npm_package_api_eu_covid_cert --out-dir ./generated/definitions/eu_covid_cert --no-strict",
     "generate:sicilia-vola-definitions": "rimraf generated/definitions/siciliaVola && mkdir -p generated/definitions/siciliaVola && gen-api-models --api-spec $npm_package_api_sicilia_vola --out-dir ./generated/definitions/siciliaVola --no-strict",
-    "generate:all": "npm-run-all generate:models generate:content-definitions generate:pagopa-api generate:pagopa-cobadge-configuration-definitions generate:pagopa-privative-configuration-definitions generate:bonus-vacanze-definitions generate:bpd-citizen generate:bpd-citizen-v2 generate:pagopa-walletv2-definitions generate:bpd-payment generate:bpd-award generate:bpd-winning-transactions generate:bpd-winning-transactions-v2 generate:cgn-definitions generate:cgn-merchants-definitions generate:cgn-geo-definitions generate:eu-covid-cert-definitions generate:sicilia-vola-definitions"
+    "generate:cdc-definitions": "rimraf generated/definitions/cdc && mkdir -p generated/definitions/cdc  && gen-api-models --api-spec $npm_package_api_cdc --out-dir ./generated/definitions/cdc --no-strict",
+    "generate:all": "npm-run-all generate:models generate:content-definitions generate:pagopa-api generate:pagopa-cobadge-configuration-definitions generate:pagopa-privative-configuration-definitions generate:bonus-vacanze-definitions generate:bpd-citizen generate:bpd-citizen-v2 generate:pagopa-walletv2-definitions generate:bpd-payment generate:bpd-award generate:bpd-winning-transactions generate:bpd-winning-transactions-v2 generate:cgn-definitions generate:cgn-merchants-definitions generate:cgn-geo-definitions generate:eu-covid-cert-definitions generate:sicilia-vola-definitions generate:cdc-definitions"
   },
   "jest": {
     "preset": "ts-jest",
