--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/winning_transactions_v2.json",
   "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v7.40.0-RELEASE/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
-  "api_cdc": "assets/cdc/CdcSwagger.yml",
+  "api_cdc": "https://raw.githubusercontent.com/pagopa/io-app/master/assets/CdcSwagger.yml",
   "author": "Matteo Boschi",
   "license": "MIT",
   "private": false,
