--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "A mock server to help io-app development https://io.italia.it/",
   "version": "1.0.0",
   "main": "app.js",
-  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v8.4.0-RELEASE/api_backend.yaml",
-  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v8.4.0-RELEASE/api_public.yaml",
-  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v8.4.0-RELEASE/api_bonus.yaml",
-  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v8.4.0-RELEASE/api_cgn.yaml",
-  "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/v8.4.0-RELEASE/api_cgn_operator_search.yaml",
+  "api_backend_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v8.9.0-RELEASE/api_backend.yaml",
+  "api_public_specs": "https://raw.githubusercontent.com/pagopa/io-backend/v8.9.0-RELEASE/api_public.yaml",
+  "api_bonus_vacanze": "https://raw.githubusercontent.com/pagopa/io-backend/v8.9.0-RELEASE/api_bonus.yaml",
+  "api_cgn": "https://raw.githubusercontent.com/pagopa/io-backend/v8.9.0-RELEASE/api_cgn.yaml",
+  "api_cgn_merchants": "https://raw.githubusercontent.com/pagopa/io-backend/v8.9.0-RELEASE/api_cgn_operator_search.yaml",
   "api_cgn_geo": "https://raw.githubusercontent.com/pagopa/io-backend/here_geoapi_integration/api_geo.yaml",
   "content_specs": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/definitions.yml",
   "api_pagopa_walletv2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/pm/walletv2.json",
@@ -21,9 +21,10 @@
   "api_bpd_award": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/award.json",
   "api_bpd_winning_transactions": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/winning_transactions.json",
   "api_bpd_winning_transactions_v2": "https://raw.githubusercontent.com/pagopa/io-services-metadata/1.0.14/bonus/specs/bpd/winning_transactions_v2.json",
-  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v8.4.0-RELEASE/api_eucovidcert.yaml",
+  "api_eu_covid_cert": "https://raw.githubusercontent.com/pagopa/io-backend/v8.9.0-RELEASE/api_eucovidcert.yaml",
   "api_sicilia_vola": "assets/SiciliaVola.yml",
   "api_cdc": "https://raw.githubusercontent.com/pagopa/io-app/master/assets/CdcSwagger.yml",
+  "api_pn": "https://raw.githubusercontent.com/pagopa/io-backend/v8.9.0-RELEASE/api_pn.yaml",
   "author": "Matteo Boschi",
   "license": "MIT",
   "private": false,
@@ -56,7 +57,8 @@
     "generate:eu-covid-cert-definitions": "rimraf generated/definitions/eu_covid_cert && mkdir -p generated/definitions/eu_covid_cert && gen-api-models --api-spec $npm_package_api_eu_covid_cert --out-dir ./generated/definitions/eu_covid_cert --no-strict",
     "generate:sicilia-vola-definitions": "rimraf generated/definitions/siciliaVola && mkdir -p generated/definitions/siciliaVola && gen-api-models --api-spec $npm_package_api_sicilia_vola --out-dir ./generated/definitions/siciliaVola --no-strict",
     "generate:cdc-definitions": "rimraf generated/definitions/cdc && mkdir -p generated/definitions/cdc  && gen-api-models --api-spec $npm_package_api_cdc --out-dir ./generated/definitions/cdc --no-strict",
-    "generate:all": "npm-run-all generate:models generate:content-definitions generate:pagopa-api generate:pagopa-cobadge-configuration-definitions generate:pagopa-privative-configuration-definitions generate:bonus-vacanze-definitions generate:bpd-citizen generate:bpd-citizen-v2 generate:pagopa-walletv2-definitions generate:bpd-payment generate:bpd-award generate:bpd-winning-transactions generate:bpd-winning-transactions-v2 generate:cgn-definitions generate:cgn-merchants-definitions generate:cgn-geo-definitions generate:eu-covid-cert-definitions generate:sicilia-vola-definitions generate:cdc-definitions"
+    "generate:pn-definitions": "rimraf generated/definitions/pn && mkdir -p generated/definitions/pn && gen-api-models --api-spec $npm_package_api_pn --out-dir ./generated/definitions/pn --no-strict --request-types --response-decoders",
+    "generate:all": "npm-run-all generate:models generate:content-definitions generate:pagopa-api generate:pagopa-cobadge-configuration-definitions generate:pagopa-privative-configuration-definitions generate:bonus-vacanze-definitions generate:bpd-citizen generate:bpd-citizen-v2 generate:pagopa-walletv2-definitions generate:bpd-payment generate:bpd-award generate:bpd-winning-transactions generate:bpd-winning-transactions-v2 generate:cgn-definitions generate:cgn-merchants-definitions generate:cgn-geo-definitions generate:eu-covid-cert-definitions generate:sicilia-vola-definitions generate:cdc-definitions generate:pn-definitions"
   },
   "jest": {
     "preset": "ts-jest",
