--- a/package.json
+++ b/package.json
@@ -83,7 +83,8 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
-    "ts-pattern": "^3.3.4"
+    "ts-pattern": "^3.3.4",
+    "ulid": "^2.3.0"
   },
   "resolutions": {
     "fp-ts": "1.19.5"
