--- a/package.json
+++ b/package.json
@@ -68,7 +68,8 @@
     "generate:pagopa": "npm-run-all generate:pagopa-walletv2-definitions generate:pagopa-privative-configuration-definitions generate:pagopa-cobadge-configuration-definitions generate:pagopa-walletv3-definitions generate:pagopa-ecommerce-definitions generate:pagopa-transactions-definitions generate:pagopa-platform-definitions",
     "generate:services-definitions": "rimraf generated/definitions/services && mkdir -p generated/definitions/services  && gen-api-models --api-spec $npm_package_api_services --out-dir ./generated/definitions/services --no-strict",
     "generate:fims_sso": "rimraf generated/definitions/fims_sso && mkdir -p generated/definitions/fims_sso && gen-api-models --api-spec $npm_package_fims_sso --out-dir ./generated/definitions/fims_sso --no-strict --request-types --response-decoders",
-    "generate": "npm-run-all generate:*"
+    "generate": "npm-run-all generate:*",
+    "prepare": "husky install"
   },
   "jest": {
     "preset": "ts-jest",
@@ -128,6 +129,7 @@
     "eslint-plugin-functional": "^5.0.8",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-sonarjs": "^0.19.0",
+    "husky": "^8.0.0",
     "jest": "^27.4.7",
     "nodemon": "^2.0.15",
     "prettier": "2.8.8",
@@ -135,5 +137,11 @@
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "eslint -c .eslintrc.js --fix"
+    ]
   }
 }
