--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "api_cdc": "./assets/CdcSwagger.yml",
   "api_fci": "https://raw.githubusercontent.com/pagopa/io-backend/v16.4.0-RELEASE/api_io_sign.yaml",
   "api_pn": "https://raw.githubusercontent.com/pagopa/io-backend/v16.4.0-RELEASE/api_pn.yaml",
-  "api_idpay": "idpay-temp.yaml",
+  "api_idpay": "https://raw.githubusercontent.com/pagopa/cstar-infrastructure/v11.6.0/src/domains/idpay-app/api/idpay_appio_full/openapi.appio.full.yml",
   "api_fast_login": "https://raw.githubusercontent.com/pagopa/io-auth-n-identity-domain/io-session-manager@1.0.0/apps/io-session-manager/api/fast-login.yaml",
   "api_trial_system": "https://raw.githubusercontent.com/pagopa/io-backend/v16.4.0-RELEASE/api_trial_system.yaml",
   "api_pagopa_walletv3": "https://raw.githubusercontent.com/pagopa/pagopa-infra/v1.202.0/src/domains/pay-wallet-app/api/io-payment-wallet/v1/_openapi.json.tpl",
